--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     <table id="pixel_canvas"></table>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="pixelmaker.js"></script>
+    <script src="design.js"></script>
 </body>
 </html>
